Added transfer file functionality for backend web file server (please note IP addresses are specific to environment)

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ olefile==0.46
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
+pycurl==7.43.0.5
 pyparsing==2.4.7
 pytest==5.4.3
 pytest-httpserver==0.3.4
